syntax = "proto3";

import "google/protobuf/wrappers.proto";

option java_package = "com.machimpyo.dot";
option java_multiple_files = true;

message UserInfoProto {
    google.protobuf.StringValue uid = 1;
    google.protobuf.StringValue nickName = 2;
    google.protobuf.StringValue profileImg = 3;
    google.protobuf.StringValue company = 4;
    google.protobuf.StringValue exitDate = 5;
}
